<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment3"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/third_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_frag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/button_3_to_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_first_frag"
        app:layout_constraintTop_toBottomOf="@id/third_fragment"
        app:layout_constraintBottom_toBottomOf="@id/button_3_to_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/button_3_to_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_second_frag"
        app:layout_constraintTop_toBottomOf="@id/button_3_to_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>