<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/second_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/button_2_to_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_first_frag"
        app:layout_constraintTop_toBottomOf="@id/second_fragment"
        app:layout_constraintBottom_toBottomOf="@id/button_2_to_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/button_2_to_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_third_frag"
        app:layout_constraintTop_toBottomOf="@id/button_2_to_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>